--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -43,3 +43,13 @@ h1 {
   border-radius: 5px;
   cursor: pointer;
 }
+.expenses {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 10px;
+  gap: 0.2rem;
+  color: #d3d2d2;
+}
