--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -43,7 +43,7 @@ h1 {
   border-radius: 5px;
   cursor: pointer;
 }
-.expenses {
+.expensesList {
   display: flex;
   justify-content: center;
   align-items: center;
